# box2d-rust

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  run_demo.cmd  run_demo.sh  todo.md
.claude/agents/: code-reviewer.md  fix-test-failures.md  implementer.md  reviewer.md  rust-expert.md  test-writer.md
.cursor/rules/: use-grok-4.5.mdc
.github/workflows/: ci.yml  deploy-demo.yml
Tests/: file_length_validation.rs
demo/: build-wasm.ps1  build-wasm.sh  dev.ts  index.html  package.json  server.ts  task-samples.md
demo/src/: controls.ts  main.ts  registry.ts  view-flags.ts  wasm.ts
demo/styles/: main.css
demo/tests/: camera-harness.test.ts  pinball-flippers.test.ts  registry.test.ts
demo/wasm/: Cargo.toml
examples/: demo_scenes.rs
examples/benchmark/: main.rs  utils.rs
scripts/: pre-commit-check.ps1  pre-commit-check.sh
src/: aabb.rs  aabb_tests.rs  bitset.rs  bitset_tests.rs  body.rs  body_api_tests.rs  broad_phase.rs  collision.rs  constants.rs  constraint_graph.rs  contact.rs  contact_api_tests.rs  contact_solver.rs  core.rs  debug_draw.rs  debug_draw_tests.rs  determinism_tests.rs  distance_joint.rs  distance_tests.rs  dynamic_tree_tests.rs  events.rs  geometry_tests.rs  hull.rs  hull_tests.rs  id.rs  id_pool.rs  id_tests.rs  island.rs  joint.rs  large_world_tests.rs  lib.rs  manifold_tests.rs  math_functions.rs  math_functions_tests.rs  motor_joint.rs  mover.rs  player_tests.rs  prismatic_joint.rs  recording_tests.rs  revolute_joint.rs  (+14 more)
src/body/: access.rs  api.rs  forces.rs  lifecycle.rs  mod.rs  plumbing.rs  state.rs
src/contact/: api.rs  lifecycle.rs  mod.rs  update.rs
src/contact_solver/: wide.rs  wide_kernels.rs
src/distance/: cast.rs  gjk.rs  mod.rs  toi.rs  types.rs
src/dynamic_tree/: insert.rs  mod.rs  query.rs  rebuild.rs  validate.rs
src/geometry/: bounds.rs  mass.rs  mod.rs  point_ray.rs  shape_cast.rs  shapes.rs
src/joint/: api.rs  draw.rs  lifecycle.rs  mod.rs  plumbing.rs  solve.rs
src/manifold/: capsules.rs  chain.rs  circles.rs  mod.rs  polygons.rs
src/math_functions/: mod.rs  query.rs  rotation.rs  scalar.rs  transform.rs  types.rs  vector.rs  (+1 more)
(+91 files in other folders)
